feat: enhance library documentation and update author name
- Update author name from "weilz" to "weilizhong" in Cargo.toml
- Expand library documentation with comprehensive usage examples
- Add detailed guideline categories and feature descriptions
- Improve code examples with additional guideline references
- Enhance documentation structure for better readability and tooling support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "api-guidelines"
 version = "0.1.0"
 edition = "2024"
-authors = ["weilz"]
+authors = ["weilizhong"]
 description = "Rust API guidelines enums and utilities for code quality and best practices"
 license = "MIT"
 repository = "https://github.com/slightmeta/api-guidelines"
